    - Made the "Require Resource Seed for Transmutation" setting not apply to fluids to avoid soft-locking some settings combinations
    - Split Rocks and Tiber Rocks to be separate settings on the Terrain tab
    - Moved Tiberium Artillery to a separate technology to reduce prerequisites for Tiberium Military 3
    - Updated rocket capacity on most items
---------------------------------------------------------------------------------------------------
Version: 2.0.8
  Bugfixes:
    - Fixed debug information for power poles not being locked behind debug setting
    - Fixed crash from encountering recipes with no results
---------------------------------------------------------------------------------------------------
Version: 2.0.7
  Bugfixes:
    - Fixed stone, coal, and crude oil being locked behind off-planet science packs when using "Nauvis has Only Tiberium" setting
    - Fixed Tiberium Node Harvest and AOE Tiberium Node Harvester using the wrong animations
    - Fixed not being able to add Blue Tiberium to filters prior to researching Blue Tiberium Mutation
    - Slightly improved performance of SRF
    - Fixed Omnicompression crashes
    - Fixed missing names on prototypes that were only viewable through Factoriopedia
  Changes:
    - Allow deconstruction planners to remove Blossom Trees prior to unlocking cliff exlposives
  Features:
    - Power now propagates across connected SRF Emitters, so you only need to connect electric poles to one emitter per continuous wall (Thank you luan for sharing https://mods.factorio.com/mod/power-propagation)
---------------------------------------------------------------------------------------------------
Version: 2.0.6
  Bugfixes:
    - Fixed progression in Tiberium Only mode being blocked by not being Crude Oil and Uranium Ore not being minable but for real this time
    - Fixed Tiber Rocks incorrectly appearing on Nauvis on modes other than Tiberium-only