@@ -16,6 +16,9 @@ Version: 2.0.9
     - Made the "Require Resource Seed for Transmutation" setting not apply to fluids to avoid soft-locking some settings combinations
     - Split Rocks and Tiber Rocks to be separate settings on the Terrain tab
     - Moved Tiberium Artillery to a separate technology to reduce prerequisites for Tiberium Military 3
+    - Changed ammo and rocket stack sizes from 200 to 100
+    - Changed fuel cell stack sizes from 50, 100, 5 to 50, 50, 50
+    - Changed Monoculture stack sizes from 20, 50 to 20, 20
     - Updated rocket capacity on most items
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.8
